# Pngup

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: ControlsApp.tsx  PhotoApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ControlPanel.tsx  PhotoOverlay.tsx
src/hooks/: useClickThrough.ts  useDrag.ts  useResize.ts
src/i18n/: index.ts
src/i18n/locales/: ar.json  de.json  en.json  es.json  fr.json  ru.json
src/lib/: events.ts  settings.ts  window.ts
src/styles/: overlay.css  themes.css
src/types/: settings.ts
